# spotify-weekly-scheduler

./: README.md  main.py  pyproject.toml
.vscode.example/: settings.json
assets/: spotify-scheduler-banner.psd
