[tool.poetry]
name = "spotify-weekly-playlist"
version = "0.1.0"
description = ""
authors = ["Vishal Ramesh <vishalramesh50@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.141.0"
python-dotenv = "^0.10.5"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
